tests/baselines/reference/metadataImportType.errors.txt
tests/cases/compiler/metadataImportType.ts(2,6): error TS2582: Cannot find name 'test'. Do you need to install type definitions for a test runner? Try `npm i @types/jest` or `npm i @types/mocha`.
tests/cases/compiler/metadataImportType.ts(3,15): error TS2307: Cannot find module './b' or its corresponding type declarations.


==== tests/cases/compiler/metadataImportType.ts (2 errors) ====
    export class A {
        @test
         ~~~~
!!! error TS2582: Cannot find name 'test'. Do you need to install type definitions for a test runner? Try `npm i @types/jest` or `npm i @types/mocha`.
        b: import('./b').B
                  ~~~~~
!!! error TS2307: Cannot find module './b' or its corresponding type declarations.
    }